@@ -15,14 +15,20 @@ package org.eclipse.sirius.web.application.studio.services.representations;
 import java.util.Objects;
 
 import org.eclipse.sirius.components.view.builder.IViewDiagramElementFinder;
+import org.eclipse.sirius.components.view.builder.generated.DeleteToolBuilder;
 import org.eclipse.sirius.components.view.builder.generated.DiagramBuilders;
+import org.eclipse.sirius.components.view.builder.generated.LabelEditToolBuilder;
+import org.eclipse.sirius.components.view.builder.generated.ViewBuilders;
 import org.eclipse.sirius.components.view.builder.providers.IColorProvider;
 import org.eclipse.sirius.components.view.builder.providers.IEdgeDescriptionProvider;
 import org.eclipse.sirius.components.view.diagram.ArrowStyle;
 import org.eclipse.sirius.components.view.diagram.ConditionalEdgeStyle;
+import org.eclipse.sirius.components.view.diagram.DeleteTool;
 import org.eclipse.sirius.components.view.diagram.DiagramDescription;
 import org.eclipse.sirius.components.view.diagram.EdgeDescription;
+import org.eclipse.sirius.components.view.diagram.EdgePalette;
 import org.eclipse.sirius.components.view.diagram.EdgeStyle;
+import org.eclipse.sirius.components.view.diagram.LabelEditTool;
 import org.eclipse.sirius.components.view.diagram.provider.DefaultToolsFactory;
 
 /**
@@ -40,9 +46,7 @@ public class RelationEdgeDescriptionProvider implements IEdgeDescriptionProvider
 
     @Override
     public EdgeDescription create() {
-        var palette = new DiagramBuilders().newEdgePalette()
-                .toolSections(new DefaultToolsFactory().createDefaultHideRevealEdgeToolSection())
-                .build();
+        var palette = this.relationEdgePalette();
 
         return new DiagramBuilders()
                 .newEdgeDescription()
@@ -56,6 +60,39 @@ public class RelationEdgeDescriptionProvider implements IEdgeDescriptionProvider
                 .style(this.defaultRelationEdgeStyle())
                 .conditionalStyles(this.containmentRelationEdgeStyle())
                 .palette(palette)
+                .build();
+    }
+
+    private EdgePalette relationEdgePalette() {
+        var labelEditTool = this.labelEditTool();
+        var deleteTool = this.deleteTool();
+
+        return new DiagramBuilders().newEdgePalette()
+                .centerLabelEditTool(labelEditTool)
+                .deleteTool(deleteTool)
+                .toolSections(new DefaultToolsFactory().createDefaultHideRevealEdgeToolSection())
+                .build();
+    }
+
+    private LabelEditTool labelEditTool() {
+        return new LabelEditToolBuilder()
+                .name("Edit Label")
+                .body(
+                        new ViewBuilders().newChangeContext()
+                                .expression("aql:self.defaultEditLabel(newLabel)")
+                                .build()
+                )
+                .build();
+    }
+
+    private DeleteTool deleteTool() {
+        return new DeleteToolBuilder()
+                .name("Edit Label")
+                .body(
+                        new ViewBuilders().newChangeContext()
+                                .expression("aql:self.defaultDelete()")
+                                .build()
+                )
                 .build();
     }
 
